--- a/src/index.css
+++ b/src/index.css
@@ -33,3 +33,20 @@
   padding: 20px;
   text-align: left;
 }
+.preview {
+  padding: 10px 16px;
+  margin: 20px 0;
+  border-bottom: solid #f2f2f2;
+}
+.preview:hover {
+  box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.1);
+}
+
+.preview h3 {
+  font-size: 15px;
+  color: blueviolet;
+  margin-bottom: 6px;
+}
+.preview a {
+  text-decoration: none !important;
+}
